--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,11 +23,11 @@ services:
       - mysql
       - redis
     environment:
-      SECRET_KEY: thisISaSECRET_1234
-      SQLALCHEMY_DATABASE_URI: mysql://superset:superset@mysql:3306/superset
-      CACHE_CONFIG: "{\"CACHE_TYPE\": \"redis\", \"CACHE_DEFAULT_TIMEOUT\": 300, \"CACHE_KEY_PREFIX\": \"caravel_\", \"CACHE_REDIS_HOST\": \"redis\", \"CACHE_REDIS_PORT\": 6379, \"CACHE_REDIS_DB\": 1, \"CACHE_REDIS_URL\": \"redis://redis:6379/1\"}"
+      MAPBOX_API_KEY: ${MAPBOX_API_KEY}
     ports:
       - "8088:8088"
+    volumes:
+      - "./superset_config.py:/home/superset/superset_config.py"
 volumes:
   mysql:
     external: false
