Re-org Dockerfile
Fix examples to support new Dockerfile

--- a/examples/sqlite/docker-compose.yml
+++ b/examples/sqlite/docker-compose.yml
@@ -15,8 +15,7 @@ services:
     ports:
       - "8088:8088"
     volumes:
-      - ./superset.db:/home/superset/.superset/superset.db
-      - ./superset_config.py:/home/superset/superset_config.py
+      - ./.superset:/home/superset/.superset
 volumes:
   redis:
     external: false
