--- a/examples/postgres/docker-compose.yml
+++ b/examples/postgres/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     ports:
       - "8088:8088"
     volumes:
-      - ./superset_config.py:/home/superset/superset_config.py
+      - ./.superset:/home/superset/.superset
 volumes:
   postgres:
     external: false
