--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,5 @@
 version: '3'
 services:
   superset:
-    build:
-      context: .
-      args:
-        SUPERSET_VERSION: 0.18.5
+    build: .
     image: amancevice/superset
