--- a/examples/mysql/docker-compose.yml
+++ b/examples/mysql/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     ports:
       - "8088:8088"
     volumes:
-      - ./.superset:/home/superset/.superset
+      - ./superset:/etc/superset
 volumes:
   mysql:
     external: false
