--- a/examples/postgres/docker-compose.yml
+++ b/examples/postgres/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     ports:
       - "8088:8088"
     volumes:
-      - ./.superset:/home/superset/.superset
+      - ./superset:/etc/superset
 volumes:
   postgres:
     external: false
