--- a/examples/sqlite/docker-compose.yml
+++ b/examples/sqlite/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - "8088:8088"
     volumes:
-      - ./.superset:/home/superset/.superset
+      - ./superset:/etc/superset
 volumes:
   redis:
     external: false
