--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,38 @@
 version: '3'
 services:
   superset:
-    build: .
+    build:
+      context: .
+      args:
+        SUPERSET_VERSION: 0.19.1
     image: amancevice/superset
+  superset-0.19.1:
+    build:
+      context: .
+      args:
+        SUPERSET_VERSION: 0.19.1
+    image: amancevice/superset:0.19.1
+  superset-0.19.0:
+    build:
+      context: .
+      args:
+        SUPERSET_VERSION: 0.19.0
+    image: amancevice/superset:0.19.0
+  superset-0.18.5:
+    build:
+      context: .
+      args:
+        SUPERSET_VERSION: 0.18.5
+    image: amancevice/superset:0.18.5
+  superset-0.18.4:
+    build:
+      context: .
+      args:
+        SUPERSET_VERSION: 0.18.4
+    image: amancevice/superset:0.18.4
+  superset-0.18.3:
+    build:
+      context: .
+      args:
+        SUPERSET_VERSION: 0.18.3
+    image: amancevice/superset:0.18.3
