--- a/examples/mysql/docker-compose.yml
+++ b/examples/mysql/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 services:
   redis:
-    image: redis:alpine
+    image: redis
     restart: always
     volumes:
       - redis:/data
   mysql:
-    image: mysql:5.7
+    image: mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: superset
