--- a/examples/postgres/docker-compose.yml
+++ b/examples/postgres/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 services:
   redis:
-    image: redis:alpine
+    image: redis
     restart: always
     volumes:
       - redis:/data
   postgres:
-    image: postgres:9.6
+    image: postgres
     restart: always
     environment:
       POSTGRES_DB: superset
