--- a/examples/sqlite/docker-compose.yml
+++ b/examples/sqlite/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   redis:
-    image: redis:alpine
+    image: redis
     restart: always
     volumes:
       - redis:/data
