--- a/examples/postgres/docker-compose.yml
+++ b/examples/postgres/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       POSTGRES_DB: superset
       POSTGRES_PASSWORD: superset
       POSTGRES_USER: superset
+    ports:
+      - "5432:5432"
     volumes:
       - postgres:/var/lib/postgresql/data
   superset:
