Update examples to use data volume

--- a/examples/mysql/docker-compose.yml
+++ b/examples/mysql/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     ports:
       - "8088:8088"
     volumes:
-      - ./superset:/etc/superset
+      - ./superset_config.py:/etc/superset/superset_config.py
 volumes:
   mysql:
     external: false
