--- a/examples/sqlite/docker-compose.yml
+++ b/examples/sqlite/docker-compose.yml
@@ -16,7 +16,8 @@ services:
     ports:
       - "8088:8088"
     volumes:
-      - ./superset:/etc/superset
+      - ./superset_config.py:/etc/superset/superset_config.py
+      - ./superset:/var/lib/superset
 volumes:
   redis:
     external: false
