--- a/examples/postgres/docker-compose.yml
+++ b/examples/postgres/docker-compose.yml
@@ -26,6 +26,12 @@ services:
       - "8088:8088"
     volumes:
       - ./superset_config.py:/etc/superset/superset_config.py
+  jupyter:
+    image: jupyter/base-notebook
+    restart: always
+    ports:
+      - "8889:8888"
+    command: start-notebook.sh --NotebookApp.token=''
 volumes:
   postgres:
     external: false
