--- a/examples/sqlite/docker-compose.yml
+++ b/examples/sqlite/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - "8088:8088"
     volumes:
       - ./superset_config.py:/etc/superset/superset_config.py
-      - ./superset:/var/lib/superset
+      - superset:/var/lib/superset
 volumes:
   redis:
-    external: false
+  superset:
