--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       args:
-        SUPERSET_VERSION: 0.29.0rc7
-    image: amancevice/superset
+        SUPERSET_VERSION: ${SUPERSET_VERSION:-0.29.0rc7}
+    image: amancevice/superset:${SUPERSET_VERSION:-latest}
     ports:
       - 8088:8088
