--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: node_js
+env:
+- TARGET=edge
+- TARGET=latest
 install:
 - npm install -g dockerlint
 script:
 - dockerlint
-- make build=edge
+- make $TARGET
 before_deploy:
 - docker login -u ${DOCKERHUB_USERNAME} -p ${DOCKERHUB_PASSWORD}
 deploy:
@@ -11,3 +14,10 @@ deploy:
   script: docker push amancevice/superset:edge
   on:
     repo: amancevice/docker-superset
+    branch: master
+    condition: ${TARGET} = edge
+- provider: script
+  script: make push
+  on:
+    repo: amancevice/docker-superset
+    tags: true
