--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -25,5 +25,5 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
     - run: make latest clean
-    - run: docker push amancevice/superset
+    - run: make push
     - run: make clobber
