--- a/requirements-db.txt
+++ b/requirements-db.txt
@@ -9,13 +9,14 @@ infi.clickhouse-orm==1.0.2
 mysqlclient==1.4.2
 psycopg2==2.7.6.1
 pyathena==1.5.1
-pybigquery==0.4.10
+pybigquery==0.4.13
 pydruid==0.5.7
 pyhive==0.6.1
 pyldap==2.4.28
 pymssql==2.1.4
 redis==3.2.1
 sasl==0.2.1
+six=1.14.0
 snowflake-sqlalchemy==1.1.16
 sqlalchemy-clickhouse==0.1.5.post0
 sqlalchemy-redshift==0.7.1
