--- a/requirements-db.txt
+++ b/requirements-db.txt
@@ -16,7 +16,7 @@ pyldap==2.4.28
 pymssql==2.1.4
 redis==3.2.1
 sasl==0.2.1
-six=1.14.0
+six==1.14.0
 snowflake-sqlalchemy==1.1.16
 sqlalchemy-clickhouse==0.1.5.post0
 sqlalchemy-redshift==0.7.1
