Add support for elasticsearch
With plugin elasticsearch-dbapi

--- a/requirements-db.txt
+++ b/requirements-db.txt
@@ -20,3 +20,4 @@ snowflake-sqlalchemy==1.1.16
 sqlalchemy-clickhouse==0.1.5.post0
 sqlalchemy-redshift==0.7.1
 thrift-sasl==0.3.0
+elasticsearch-dbapi==0.1.0
