--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -1,14 +1,10 @@
 name: edge
-
 on:
+  pull_request:
   push:
-    branches:
-    - master
   schedule:
-  - cron: "11 21 * * *"
-
+    - cron: '11 21 * * *'
 jobs:
-
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -16,16 +12,14 @@ jobs:
       - uses: actions/setup-node@v1
       - run: npm install -g dockerlint
       - run: dockerlint
-
   build-push:
     runs-on: ubuntu-latest
     needs: lint
     steps:
-    - uses: actions/checkout@v1
-    - uses: azure/docker-login@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-    - run: make edge clean
-    - run: docker push amancevice/superset:edge
-    - run: make clobber
+      - uses: actions/checkout@v1
+      - uses: azure/docker-login@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - run: make edge
+      - run: docker push amancevice/superset:edge
