--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -1,13 +1,8 @@
 name: latest
-
 on:
   pull_request:
   push:
-    branches:
-    - master
-
 jobs:
-
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -15,10 +10,9 @@ jobs:
       - uses: actions/setup-node@v1
       - run: npm install -g dockerlint
       - run: dockerlint
-
   build:
     runs-on: ubuntu-latest
     needs: lint
     steps:
-    - uses: actions/checkout@v1
-    - run: make latest clobber
+      - uses: actions/checkout@v1
+      - run: make latest
