--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,12 +1,9 @@
 name: push
-
 on:
   release:
     types:
-    - published
-
+      - published
 jobs:
-
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -14,16 +11,13 @@ jobs:
       - uses: actions/setup-node@v1
       - run: npm install -g dockerlint
       - run: dockerlint
-
   build-push:
     runs-on: ubuntu-latest
     needs: lint
     steps:
-    - uses: actions/checkout@v1
-    - uses: azure/docker-login@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-    - run: make latest clean
-    - run: make push
-    - run: make clobber
+      - uses: actions/checkout@v1
+      - uses: azure/docker-login@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - run: make latest push
