--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ gevent==1.4.0
 impyla==0.14.0
 infi.clickhouse-orm==1.0.2
 mysqlclient==1.4.2
+pillow==7.2.0
 psycopg2==2.7.6.1
 pyathena==1.5.1
 pybigquery==0.4.13
