--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
+authlib==0.14.3
 cx_oracle==7.3.0
 elasticsearch-dbapi==0.1.2
 flask-cors==3.0.3
 flask-mail==0.9.1
-flask-oauth==0.12
-flask_oauthlib==0.9.5
 gevent==1.4.0
 impyla==0.14.0
 infi.clickhouse-orm==1.0.2
