--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -16,9 +16,9 @@ jobs:
     needs: lint
     steps:
       - uses: actions/checkout@v2
-      - uses: azure/docker-login@v1
+      - uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - run: make edge
       - run: docker push amancevice/superset:edge
