--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,8 +16,8 @@ jobs:
     needs: lint
     steps:
       - uses: actions/checkout@v2
-      - uses: azure/docker-login@v1
+      - uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - run: make latest push
