--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ pybigquery==0.4.13
 pydruid==0.5.7
 pyhive==0.6.1
 pyldap==2.4.28
-pymssql==2.1.4
+pymssql-linux==2.1.6
 redis==3.2.1
 sasl==0.2.1
 snowflake-sqlalchemy==1.2.1
