Add sqlalchemy-trino library as requirement

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,4 +23,5 @@ sasl==0.2.1
 snowflake-sqlalchemy==1.2.1
 sqlalchemy-clickhouse==0.1.5.post0
 sqlalchemy-redshift==0.7.1
+sqlalchemy-trino==0.3.0
 thrift-sasl==0.3.0
