--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 authlib==0.14.3
+clickhouse-sqlalchemy==0.1.6
 cx_oracle==7.3.0
 elasticsearch-dbapi==0.1.2
 fbprophet==0.7.1
@@ -21,7 +22,6 @@ pymssql-linux==2.1.6
 redis==3.2.1
 sasl==0.2.1
 snowflake-sqlalchemy==1.2.1
-sqlalchemy-clickhouse==0.1.5.post0
 sqlalchemy-redshift==0.7.1
 sqlalchemy-trino==0.3.0
 thrift-sasl==0.3.0
