Update GitHub actions

--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -15,4 +15,8 @@ jobs:
     needs: lint
     steps:
       - uses: actions/checkout@v2
-      - run: make latest
+      - uses: actions/setup-python@v3
+        with:
+          python-version: "3.8"
+      - run: pip install pipenv
+      - run: make build
