--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -2,7 +2,7 @@ name: edge
 on:
   push:
   schedule:
-    - cron: '11 21 * * *'
+    - cron: "11 21 * * *"
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -16,9 +16,13 @@ jobs:
     needs: lint
     steps:
       - uses: actions/checkout@v2
-      - uses: docker/login-action@v1
+      - uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - uses: actions/setup-python@v3
+        with:
+          python-version: "3.8"
+      - run: pip install pipenv
       - run: make edge
-      - run: docker push amancevice/superset:edge
+      - run: make push
