--- a/Pipfile
+++ b/Pipfile
@@ -39,6 +39,7 @@ snowflake-sqlalchemy = "==1.2.1"
 sqlalchemy-redshift = "==0.7.1"
 sqlalchemy-trino = "==0.3.0"
 thrift-sasl = "==0.3.0"
+werkzeug = "==2.0.3"
 
 [requires]
 python_version = "3.8"
