--- a/Pipfile
+++ b/Pipfile
@@ -40,6 +40,7 @@ sqlalchemy-redshift = "==0.7.1"
 sqlalchemy-trino = "==0.3.0"
 thrift-sasl = "==0.3.0"
 werkzeug = "==2.0.3"
+wtforms = "==2.3.3"
 
 [requires]
 python_version = "3.8"
