pybigquery -> sqlalchemy-bigquery

--- a/Pipfile
+++ b/Pipfile
@@ -28,7 +28,6 @@ pillow = "==9.3.0"
 prophet = "==1.0.1"
 psycopg2 = "==2.9.3"
 pyathena = "==1.5.1"
-pybigquery = "==0.4.13"
 pydruid = "==0.5.7"
 pyhive = "==0.6.1"
 pyldap = "==2.4.28"
@@ -36,6 +35,7 @@ pymssql-linux = "==2.1.6"
 redis = "==4.5.4"
 sasl = "==0.2.1"
 snowflake-sqlalchemy = "==1.2.1"
+sqlalchemy-bigquery = "==1.6.1"
 sqlalchemy-redshift = "==0.7.1"
 sqlalchemy-trino = "==0.3.0"
 thrift-sasl = "==0.3.0"
