--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,13 +16,20 @@ jobs:
     needs: lint
     steps:
       - uses: actions/checkout@v3
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
       - uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - uses: actions/setup-python@v3
+      - name: meta
+        id: meta
+        run: |
+          version="$(jq -r '.default."apache-superset".version' Pipfile.lock | grep -Eo '[0-9.]+')"
+          tags="amancevice/superset,amancevice/superset:$version"
+          echo "tags=$tags" >> $GITHUB_OUTPUTS
+      - uses: docker/build-push-action@v5
         with:
-          python-version: "3.8"
-      - run: pip install pipenv
-      - run: make build
-      - run: make push
+          platforms: linux/amd64
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
