--- a/Pipfile
+++ b/Pipfile
@@ -3,44 +3,41 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
-# This section for Python packages that
-# MUST be installed before anything else
 [packages]
-pystan = "==2.19.1.1"
+apache-superset = "==3.0.0"
+cython = "==3.0.3"
+# pystan = "==3.7.0"
+urllib3 = "==1.26.17"
 
-# This section for all other packages
 [dev-packages]
-"infi.clickhouse-orm" = "==1.0.2"
-authlib = "==0.14.3"
-clickhouse-sqlalchemy = "==0.1.6"
-cx-oracle = "==7.3.0"
-elasticsearch-dbapi = "==0.1.2"
-flask-cors = "==3.0.9"
+"infi.clickhouse-orm" = "==2.1.3"
+authlib = "==1.2.1"
+clickhouse-sqlalchemy = "==0.2.4"
+cx-oracle = "==8.3.0"
+# elasticsearch-dbapi = "==0.2.10"
+flask-cors = "==4.0.0"
 flask-mail = "==0.9.1"
 flask-oauth = "==0.12"
-flask-oauthlib = "==0.9.5"
-gevent = "==22.10.2"
-impyla = "==0.14.0"
-markupsafe = "==2.0.1"
-mysqlclient = "==1.4.2"
-openpyxl = "==3.0.10"
-pillow = "==9.3.0"
-prophet = "==1.0.1"
-psycopg2 = "==2.9.3"
-pyathena = "==1.5.1"
-pydruid = "==0.5.7"
-pyhive = "==0.6.1"
-pyldap = "==2.4.28"
-pymssql-linux = "==2.1.6"
-redis = "==4.5.4"
-sasl = "==0.2.1"
-snowflake-sqlalchemy = "==1.2.1"
-sqlalchemy-bigquery = "==1.6.1"
+flask-oauthlib = "==0.9.6"
+gevent = "==23.9.1"
+impyla = "==0.18.0"
+markupsafe = "==2.1.3"
+mysqlclient = "==2.2.0"
+openpyxl = "==3.1.2"
+pillow = "==10.0.1"
+# prophet = "==1.1.4"
+psycopg2 = "==2.9.7"
+pyathena = "==3.0.7"
+pydruid = "==0.6.5"
+pyhive = "==0.7.0"
+pyldap = "==3.0.0"
+# pymssql-linux = "==2.1.6"
+sasl = "==0.3.1"
+# snowflake-sqlalchemy = "==1.5.0"
+sqlalchemy-bigquery = "==1.8.0"
 sqlalchemy-redshift = "==0.8.14"
-sqlalchemy-trino = "==0.3.0"
-thrift-sasl = "==0.3.0"
-werkzeug = "==2.0.3"
-wtforms = "==2.3.3"
+sqlalchemy-trino = "==0.5.0"
+thrift-sasl = "==0.4.3"
 
 [requires]
 python_version = "3.9"
