--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,8 +3,8 @@ asynch==0.2.2; python_version >= '3.7' and python_version < '4.0'
 authlib==1.2.1
 bitarray==2.8.2
 blinker==1.6.3; python_version >= '3.7'
-boto3==1.28.62; python_version >= '3.7'
-botocore==1.31.62; python_version >= '3.7'
+boto3==1.28.65; python_version >= '3.7'
+botocore==1.31.65; python_version >= '3.7'
 cachelib==0.10.2; python_version >= '3.7'
 cachetools==5.3.1; python_version >= '3.7'
 certifi==2023.7.22; python_version >= '3.6'
@@ -27,13 +27,13 @@ fsspec==2023.9.2; python_version >= '3.8'
 future==0.18.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 gevent==23.9.1; python_version >= '3.8'
 google-api-core==2.12.0; python_version >= '3.7'
-google-auth==2.23.2; python_version >= '3.7'
+google-auth==2.23.3; python_version >= '3.7'
 google-cloud-bigquery==3.12.0; python_version >= '3.7'
 google-cloud-core==2.3.3; python_version >= '3.7'
 google-crc32c==1.5.0; python_version >= '3.7'
 google-resumable-media==2.6.0; python_version >= '3.7'
-googleapis-common-protos==1.60.0; python_version >= '3.7'
-greenlet==3.0.0; python_version >= '3.7'
+googleapis-common-protos==1.61.0; python_version >= '3.7'
+greenlet==3.0.0; python_version < '3.11' and platform_python_implementation == 'CPython'
 grpcio==1.59.0; python_version >= '3.7'
 grpcio-status==1.59.0
 httplib2==0.22.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
@@ -93,7 +93,7 @@ zope.interface==6.1; python_version >= '3.7'
 zstd==1.5.5.1
 alembic==1.12.0; python_version >= '3.7'
 amqp==5.1.1; python_version >= '3.6'
-apache-superset==3.0.0; python_version ~= '3.9'
+apache-superset==3.0.1; python_version ~= '3.9'
 apispec[yaml]==6.3.0; python_version >= '3.7'
 async-timeout==4.0.3; python_full_version <= '3.11.2'
 attrs==23.1.0; python_version >= '3.7'
@@ -110,14 +110,14 @@ click-repl==0.3.0; python_version >= '3.6'
 colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
 convertdate==2.4.0; python_version >= '3.7' and python_version < '4'
 cron-descriptor==1.4.0
-croniter==1.4.1; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+croniter==2.0.1; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 cython==3.0.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecation==2.1.0
 dnspython==2.4.2; python_version >= '3.8' and python_version < '4.0'
 email-validator==1.3.1; python_version >= '3.5'
 exceptiongroup==1.1.3; python_version < '3.11'
-flask-appbuilder==4.3.7; python_version ~= '3.7'
+flask-appbuilder==4.3.9; python_version ~= '3.7'
 flask-babel==2.0.0
 flask-caching==1.11.1; python_version >= '3.7'
 flask-compress==1.14
@@ -131,7 +131,7 @@ flask-wtf==1.2.1; python_version >= '3.8'
 func-timeout==4.3.5
 geographiclib==2.0; python_version >= '3.7'
 geopy==2.4.0; python_version >= '3.7'
-gunicorn==21.2.0; sys_platform != 'win32'
+gunicorn==21.2.0; python_version >= '3.5'
 h11==0.14.0; python_version >= '3.7'
 hashids==1.3.1; python_version >= '2.7'
 hijri-converter==2.3.1; python_version >= '3.7'
@@ -154,7 +154,7 @@ msgpack==1.0.7; python_version >= '3.8'
 nh3==0.2.14
 numpy==1.23.5; python_version >= '3.8'
 ordered-set==4.1.0; python_version >= '3.7'
-outcome==1.2.0; python_version >= '3.7'
+outcome==1.3.0; python_version >= '3.7'
 pandas==1.5.3; python_version >= '3.8'
 paramiko==3.3.1; python_version >= '3.6'
 parsedatetime==2.6
@@ -174,7 +174,7 @@ pyyaml==6.0.1; python_version >= '3.6'
 redis==4.6.0; python_version >= '3.7'
 referencing==0.30.2; python_version >= '3.8'
 rich==13.6.0; python_full_version >= '3.7.0'
-rpds-py==0.10.4; python_version >= '3.8'
+rpds-py==0.10.6; python_version >= '3.8'
 selenium==4.9.1; python_version >= '3.7'
 shortid==0.1.2
 simplejson==3.19.2; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
@@ -193,6 +193,6 @@ vine==5.0.0; python_version >= '3.6'
 wcwidth==0.2.8
 wrapt==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 wsproto==1.2.0; python_full_version >= '3.7.0'
-wtforms==3.0.1; python_version >= '3.7'
+wtforms==3.1.0; python_version >= '3.8'
 wtforms-json==0.3.5
 xlsxwriter==3.0.9; python_version >= '3.6'
