--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 -i https://pypi.org/simple
 alembic==1.12.0; python_version >= '3.7'
 amqp==5.1.1; python_version >= '3.6'
-apache-superset==3.0.0; python_version ~= '3.9'
+apache-superset==3.0.1; python_version ~= '3.9'
 apispec[yaml]==6.3.0; python_version >= '3.7'
 async-timeout==4.0.3; python_full_version <= '3.11.2'
 attrs==23.1.0; python_version >= '3.7'
@@ -32,7 +32,7 @@ dnspython==2.4.2; python_version >= '3.8' and python_version < '4.0'
 email-validator==1.3.1; python_version >= '3.5'
 exceptiongroup==1.1.3; python_version < '3.11'
 flask==2.3.3; python_version >= '3.8'
-flask-appbuilder==4.3.8; python_version ~= '3.7'
+flask-appbuilder==4.3.9; python_version ~= '3.7'
 flask-babel==2.0.0
 flask-caching==1.11.1; python_version >= '3.7'
 flask-compress==1.14
@@ -46,7 +46,7 @@ flask-wtf==1.2.1; python_version >= '3.8'
 func-timeout==4.3.5
 geographiclib==2.0; python_version >= '3.7'
 geopy==2.4.0; python_version >= '3.7'
-gunicorn==21.2.0; sys_platform != 'win32'
+gunicorn==21.2.0; python_version >= '3.5'
 h11==0.14.0; python_version >= '3.7'
 hashids==1.3.1; python_version >= '2.7'
 hijri-converter==2.3.1; python_version >= '3.7'
@@ -74,7 +74,7 @@ msgpack==1.0.7; python_version >= '3.8'
 nh3==0.2.14
 numpy==1.23.5; python_version >= '3.8'
 ordered-set==4.1.0; python_version >= '3.7'
-outcome==1.2.0; python_version >= '3.7'
+outcome==1.3.0; python_version >= '3.7'
 packaging==23.2; python_version >= '3.7'
 pandas==1.5.3; python_version >= '3.8'
 paramiko==3.3.1; python_version >= '3.6'
