--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,13 +3,13 @@ asynch==0.2.2; python_version >= '3.7' and python_version < '4.0'
 authlib==1.2.1
 bitarray==2.8.2
 blinker==1.6.3; python_version >= '3.7'
-boto3==1.28.65; python_version >= '3.7'
-botocore==1.31.65; python_version >= '3.7'
+boto3==1.28.71; python_version >= '3.7'
+botocore==1.31.71; python_version >= '3.7'
 cachelib==0.10.2; python_version >= '3.7'
-cachetools==5.3.1; python_version >= '3.7'
+cachetools==5.3.2; python_version >= '3.7'
 certifi==2023.7.22; python_version >= '3.6'
 cffi==1.16.0; python_version >= '3.8'
-charset-normalizer==3.3.0; python_full_version >= '3.7.0'
+charset-normalizer==3.3.1; python_full_version >= '3.7.0'
 ciso8601==2.3.0
 click==8.1.7; python_version >= '3.7'
 clickhouse-cityhash==1.0.2.4
@@ -23,17 +23,17 @@ flask-cors==4.0.0
 flask-mail==0.9.1
 flask-oauth==0.12
 flask-oauthlib==0.9.6
-fsspec==2023.9.2; python_version >= '3.8'
+fsspec==2023.10.0; python_version >= '3.8'
 future==0.18.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 gevent==23.9.1; python_version >= '3.8'
-google-api-core==2.12.0; python_version >= '3.7'
+google-api-core[grpc]==2.12.0; python_version >= '3.7'
 google-auth==2.23.3; python_version >= '3.7'
 google-cloud-bigquery==3.12.0; python_version >= '3.7'
 google-cloud-core==2.3.3; python_version >= '3.7'
 google-crc32c==1.5.0; python_version >= '3.7'
 google-resumable-media==2.6.0; python_version >= '3.7'
 googleapis-common-protos==1.61.0; python_version >= '3.7'
-greenlet==3.0.0; python_version < '3.11' and platform_python_implementation == 'CPython'
+greenlet==3.0.1; python_version >= '3.7'
 grpcio==1.59.0; python_version >= '3.7'
 grpcio-status==1.59.0
 httplib2==0.22.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
@@ -84,20 +84,20 @@ tenacity==8.2.3; python_version >= '3.7'
 thrift==0.16.0; python_version >= '3.0'
 thrift-sasl==0.4.3
 trino[sqlalchemy]==0.327.0; python_version >= '3.7'
-tzlocal==5.1; python_version >= '3.7'
+tzlocal==5.2; python_version >= '3.8'
 urllib3[socks]==1.26.17; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 werkzeug==2.3.7; python_version >= '3.8'
 zipp==3.17.0; python_version >= '3.8'
 zope.event==5.0; python_version >= '3.7'
 zope.interface==6.1; python_version >= '3.7'
 zstd==1.5.5.1
-alembic==1.12.0; python_version >= '3.7'
+alembic==1.12.1; python_version >= '3.7'
 amqp==5.1.1; python_version >= '3.6'
 apache-superset==3.0.1; python_version ~= '3.9'
 apispec[yaml]==6.3.0; python_version >= '3.7'
 async-timeout==4.0.3; python_full_version <= '3.11.2'
 attrs==23.1.0; python_version >= '3.7'
-babel==2.13.0; python_version >= '3.7'
+babel==2.13.1; python_version >= '3.7'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
 bcrypt==4.0.1; python_version >= '3.6'
 billiard==4.1.0; python_version >= '3.7'
@@ -154,7 +154,7 @@ msgpack==1.0.7; python_version >= '3.8'
 nh3==0.2.14
 numpy==1.23.5; python_version >= '3.8'
 ordered-set==4.1.0; python_version >= '3.7'
-outcome==1.3.0; python_version >= '3.7'
+outcome==1.3.0.post0; python_version >= '3.7'
 pandas==1.5.3; python_version >= '3.8'
 paramiko==3.3.1; python_version >= '3.6'
 parsedatetime==2.6
