--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 -i https://pypi.org/simple
-alembic==1.12.0; python_version >= '3.7'
+alembic==1.12.1; python_version >= '3.7'
 amqp==5.1.1; python_version >= '3.6'
 apache-superset==3.0.1; python_version ~= '3.9'
 apispec[yaml]==6.3.0; python_version >= '3.7'
 async-timeout==4.0.3; python_full_version <= '3.11.2'
 attrs==23.1.0; python_version >= '3.7'
-babel==2.13.0; python_version >= '3.7'
+babel==2.13.1; python_version >= '3.7'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
 bcrypt==4.0.1; python_version >= '3.6'
 billiard==4.1.0; python_version >= '3.7'
@@ -74,7 +74,7 @@ msgpack==1.0.7; python_version >= '3.8'
 nh3==0.2.14
 numpy==1.23.5; python_version >= '3.8'
 ordered-set==4.1.0; python_version >= '3.7'
-outcome==1.3.0; python_version >= '3.7'
+outcome==1.3.0.post0; python_version >= '3.7'
 packaging==23.2; python_version >= '3.7'
 pandas==1.5.3; python_version >= '3.8'
 paramiko==3.3.1; python_version >= '3.6'
