--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 apache-superset = "==3.0.1"
 cython = "==3.0.3"
+holidays = "==0.23"
 # pystan = "==3.7.0"
 urllib3 = "==1.26.17"
 
@@ -25,7 +26,7 @@ markupsafe = "==2.1.3"
 mysqlclient = "==2.2.0"
 openpyxl = "==3.1.2"
 pillow = "==10.0.1"
-# prophet = "==1.1.4"
+prophet = "==1.1.1"
 psycopg2 = "==2.9.7"
 pyathena = "==3.0.7"
 pydruid = "==0.6.5"
