--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -15,14 +15,21 @@ click==8.1.7; python_version >= '3.7'
 clickhouse-cityhash==1.0.2.4
 clickhouse-driver==0.2.6; python_version >= '3.7' and python_version < '4'
 clickhouse-sqlalchemy==0.2.4; python_version >= '3.7' and python_version < '4'
+cmdstanpy==1.2.0; python_version >= '3.8'
+colorama==0.4.6; platform_system == 'Windows'
+contourpy==1.2.0; python_version >= '3.9'
+convertdate==2.4.0; python_version >= '3.7' and python_version < '4'
 cryptography==39.0.2; python_version >= '3.6'
 cx-oracle==8.3.0
+cycler==0.12.1; python_version >= '3.8'
+ephem==4.1.5
 et-xmlfile==1.1.0; python_version >= '3.6'
 flask==2.3.3; python_version >= '3.8'
 flask-cors==4.0.0
 flask-mail==0.9.1
 flask-oauth==0.12
 flask-oauthlib==0.9.6
+fonttools==4.44.3; python_version >= '3.8'
 fsspec==2023.10.0; python_version >= '3.8'
 future==0.18.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 gevent==23.9.1; python_version >= '3.8'
@@ -36,24 +43,34 @@ googleapis-common-protos==1.61.0; python_version >= '3.7'
 greenlet==3.0.1; python_version >= '3.7'
 grpcio==1.59.0; python_version >= '3.7'
 grpcio-status==1.59.0
+hijri-converter==2.3.1; python_version >= '3.7'
+holidays==0.23; python_version >= '3.7'
 httplib2==0.22.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 idna==3.4; python_version >= '3.5'
 importlib-metadata==6.8.0; python_version >= '3.8'
+importlib-resources==6.1.1; python_version < '3.10'
 impyla==0.18.0
 infi.clickhouse-orm==2.1.3
 iso8601==2.1.0; python_version >= '3.7' and python_version < '4.0'
 itsdangerous==2.1.2; python_version >= '3.7'
 jinja2==3.1.2; python_version >= '3.7'
 jmespath==1.0.1; python_version >= '3.7'
+kiwisolver==1.4.5; python_version >= '3.7'
+korean-lunar-calendar==0.3.1
 leb128==1.0.5
+lunarcalendar==0.0.9; python_version >= '2.7' and python_version < '4'
 lz4==4.3.2; python_version >= '3.7'
 markupsafe==2.1.3; python_version >= '3.7'
+matplotlib==3.8.1; python_version >= '3.9'
 mysqlclient==2.2.0; python_version >= '3.8'
+numpy==1.26.2; python_version >= '3.9'
 oauth2==1.9.0.post1
 oauthlib==2.1.0
 openpyxl==3.1.2; python_version >= '3.6'
 packaging==23.2; python_version >= '3.7'
+pandas==2.1.3; python_version >= '3.9'
 pillow==10.0.1; python_version >= '3.8'
+prophet==1.1.1; python_version >= '3.7'
 proto-plus==1.22.3; python_version >= '3.6'
 protobuf==4.24.4; python_version >= '3.7'
 psycopg2==2.9.7; python_version >= '3.6'
@@ -65,6 +82,7 @@ pycparser==2.21
 pydruid==0.6.5
 pyhive==0.7.0
 pyldap==3.0.0
+pymeeus==0.5.12
 pyparsing==3.1.1; python_full_version >= '3.6.8'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-ldap==3.4.3; python_version >= '3.6'
@@ -75,124 +93,24 @@ rsa==4.9; python_version >= '3.6' and python_version < '4'
 s3transfer==0.7.0; python_version >= '3.7'
 sasl==0.3.1
 setuptools==68.2.2; python_version >= '3.8'
+setuptools-git==1.2
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlalchemy==1.4.49; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 sqlalchemy-bigquery==1.8.0; python_version < '3.12' and python_version >= '3.7'
 sqlalchemy-redshift==0.8.14; python_version >= '3.4'
 sqlalchemy-trino==0.5.0; python_version >= '3.7'
+stanio==0.3.0; python_version >= '3.8'
 tenacity==8.2.3; python_version >= '3.7'
 thrift==0.16.0; python_version >= '3.0'
 thrift-sasl==0.4.3
+tqdm==4.66.1; python_version >= '3.7'
 trino[sqlalchemy]==0.327.0; python_version >= '3.7'
+tzdata==2023.3; python_version >= '2'
 tzlocal==5.2; python_version >= '3.8'
 urllib3[socks]==1.26.17; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 werkzeug==2.3.7; python_version >= '3.8'
+wheel==0.41.3; python_version >= '3.7'
 zipp==3.17.0; python_version >= '3.8'
 zope.event==5.0; python_version >= '3.7'
 zope.interface==6.1; python_version >= '3.7'
 zstd==1.5.5.1
-alembic==1.12.1; python_version >= '3.7'
-amqp==5.1.1; python_version >= '3.6'
-apache-superset==3.0.1; python_version ~= '3.9'
-apispec[yaml]==6.3.0; python_version >= '3.7'
-async-timeout==4.0.3; python_full_version <= '3.11.2'
-attrs==23.1.0; python_version >= '3.7'
-babel==2.13.1; python_version >= '3.7'
-backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
-bcrypt==4.0.1; python_version >= '3.6'
-billiard==4.1.0; python_version >= '3.7'
-brotli==1.1.0; platform_python_implementation != 'PyPy'
-celery==5.3.4; python_version >= '3.8'
-click-didyoumean==0.3.0; python_full_version >= '3.6.2' and python_full_version < '4.0.0'
-click-option-group==0.5.6; python_version >= '3.6' and python_version < '4'
-click-plugins==1.1.1
-click-repl==0.3.0; python_version >= '3.6'
-colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
-convertdate==2.4.0; python_version >= '3.7' and python_version < '4'
-cron-descriptor==1.4.0
-croniter==2.0.1; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-cython==3.0.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-deprecation==2.1.0
-dnspython==2.4.2; python_version >= '3.8' and python_version < '4.0'
-email-validator==1.3.1; python_version >= '3.5'
-exceptiongroup==1.1.3; python_version < '3.11'
-flask-appbuilder==4.3.9; python_version ~= '3.7'
-flask-babel==2.0.0
-flask-caching==1.11.1; python_version >= '3.7'
-flask-compress==1.14
-flask-jwt-extended==4.5.3; python_version >= '3.7' and python_version < '4'
-flask-limiter==3.5.0; python_version >= '3.7'
-flask-login==0.6.2; python_version >= '3.7'
-flask-migrate==3.1.0; python_version >= '3.6'
-flask-sqlalchemy==2.5.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-flask-talisman==1.1.0
-flask-wtf==1.2.1; python_version >= '3.8'
-func-timeout==4.3.5
-geographiclib==2.0; python_version >= '3.7'
-geopy==2.4.0; python_version >= '3.7'
-gunicorn==21.2.0; python_version >= '3.5'
-h11==0.14.0; python_version >= '3.7'
-hashids==1.3.1; python_version >= '2.7'
-hijri-converter==2.3.1; python_version >= '3.7'
-holidays==0.23; python_version >= '3.7'
-humanize==4.8.0; python_version >= '3.8'
-importlib-resources==6.1.0; python_version >= '3.8'
-isodate==0.6.1
-jsonschema==4.19.1; python_version >= '3.8'
-jsonschema-specifications==2023.7.1; python_version >= '3.8'
-kombu==5.3.2; python_version >= '3.8'
-korean-lunar-calendar==0.3.1
-limits==3.6.0; python_version >= '3.7'
-mako==1.2.4; python_version >= '3.7'
-markdown==3.5; python_version >= '3.8'
-markdown-it-py==3.0.0; python_version >= '3.8'
-marshmallow==3.20.1; python_version >= '3.8'
-marshmallow-sqlalchemy==0.26.1; python_version >= '3.6'
-mdurl==0.1.2; python_version >= '3.7'
-msgpack==1.0.7; python_version >= '3.8'
-nh3==0.2.14
-numpy==1.23.5; python_version >= '3.8'
-ordered-set==4.1.0; python_version >= '3.7'
-outcome==1.3.0.post0; python_version >= '3.7'
-pandas==1.5.3; python_version >= '3.8'
-paramiko==3.3.1; python_version >= '3.6'
-parsedatetime==2.6
-pgsanity==0.2.9
-polyline==2.0.1; python_version >= '3.7'
-prison==0.2.1
-prompt-toolkit==3.0.39; python_full_version >= '3.7.0'
-pyarrow==12.0.1; python_version >= '3.7'
-pygments==2.16.1; python_version >= '3.7'
-pyjwt==2.8.0; python_version >= '3.7'
-pymeeus==0.5.12
-pynacl==1.5.0; python_version >= '3.6'
-pysocks==1.7.1
-python-dotenv==1.0.0; python_version >= '3.8'
-python-geohash==0.8.5
-pyyaml==6.0.1; python_version >= '3.6'
-redis==4.6.0; python_version >= '3.7'
-referencing==0.30.2; python_version >= '3.8'
-rich==13.6.0; python_full_version >= '3.7.0'
-rpds-py==0.10.6; python_version >= '3.8'
-selenium==4.9.1; python_version >= '3.7'
-shortid==0.1.2
-simplejson==3.19.2; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
-slack-sdk==3.23.0; python_full_version >= '3.6.0'
-sniffio==1.3.0; python_version >= '3.7'
-sortedcontainers==2.4.0
-sqlalchemy-utils==0.38.3; python_version ~= '3.6'
-sqlparse==0.4.4; python_version >= '3.5'
-sshtunnel==0.4.0
-tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-trio==0.22.2; python_version >= '3.7'
-trio-websocket==0.11.1; python_version >= '3.7'
-typing-extensions==4.8.0; python_version >= '3.8'
-tzdata==2023.3; python_version >= '2'
-vine==5.0.0; python_version >= '3.6'
-wcwidth==0.2.8
-wrapt==1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-wsproto==1.2.0; python_full_version >= '3.7.0'
-wtforms==3.1.0; python_version >= '3.8'
-wtforms-json==0.3.5
-xlsxwriter==3.0.9; python_version >= '3.6'
