--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -30,7 +30,9 @@ jobs:
           echo "tags=$tags" >> "$GITHUB_OUTPUT"
       - uses: docker/build-push-action@v5
         with:
-          platforms: linux/amd64
+          platforms: |
+            linux/amd64
+            linux/arm64
           push: true
           tags: |
             ${{ steps.meta.outputs.tags }}
