--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,6 @@
 -i https://pypi.org/simple
 asynch==0.2.4; python_version >= '3.7' and python_version < '4.0'
-authlib==1.2.1
+authlib==1.3.1; python_version >= '3.8'
 bitarray==2.9.2
 blinker==1.8.2; python_version >= '3.8'
 boto3==1.35.29; python_version >= '3.8'
@@ -23,7 +23,7 @@ cycler==0.12.1; python_version >= '3.8'
 ephem==4.1.5
 et-xmlfile==1.1.0; python_version >= '3.6'
 flask==2.3.3; python_version >= '3.8'
-flask-cors==4.0.0
+flask-cors==4.0.2
 flask-mail==0.9.1
 flask-oauth==0.12
 flask-oauthlib==0.9.6
