--- a/Pipfile
+++ b/Pipfile
@@ -23,14 +23,14 @@ markupsafe = "==2.1.3"
 mysqlclient = "==2.2.0"
 openpyxl = "==3.1.2"
 pillow = "==10.2.0"
-prophet = "==1.1.1"
+prophet = "==1.1.5"
 psycopg2 = "==2.9.7"
 pyathena = "==3.0.7"
 pydruid = "==0.6.5"
 pyhive = "==0.7.0"
 pyldap = "==3.0.0"
 # pymssql-linux = "==2.1.6"
-sasl = "==0.3.1"
+# sasl = "==0.3.1"
 # snowflake-sqlalchemy = "==1.5.1"
 sqlalchemy-bigquery = "==1.8.0"
 sqlalchemy-redshift = "==0.8.14"
