--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -93,12 +93,12 @@ snowflake-connector-python==3.15.0; python_version >= '3.9'
 snowflake-sqlalchemy==1.7.3; python_version >= '3.8'
 sortedcontainers==2.4.0
 sqlalchemy==1.4.54; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-sqlalchemy-bigquery==1.8.0; python_version < '3.12' and python_version >= '3.7'
+sqlalchemy-bigquery==1.15.0; python_version < '3.14' and python_version >= '3.8'
 sqlalchemy-redshift==0.8.14; python_version >= '3.4'
 sqlalchemy-trino==0.5.0; python_version >= '3.7'
 stanio==0.5.1; python_version >= '3.8'
 tenacity==9.1.2; python_version >= '3.9'
-thrift==0.16.0
+thrift==0.16.0; python_version >= '3.0'
 thrift-sasl==0.4.3
 tomlkit==0.13.3; python_version >= '3.8'
 tqdm==4.67.1; python_version >= '3.7'
