--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,13 +2,13 @@
 asn1crypto==1.5.1
 asynch==0.3.0; python_version >= '3.9' and python_version < '4.0'
 authlib==1.3.1; python_version >= '3.8'
-bitarray==3.4.3
+bitarray==3.5.2
 blinker==1.9.0; python_version >= '3.9'
-boto3==1.38.42; python_version >= '3.9'
-botocore==1.38.42; python_version >= '3.9'
+boto3==1.39.10; python_version >= '3.9'
+botocore==1.39.10; python_version >= '3.9'
 cachelib==0.13.0; python_version >= '3.8'
 cachetools==5.5.2; python_version >= '3.7'
-certifi==2025.6.15; python_version >= '3.7'
+certifi==2025.7.14; python_version >= '3.7'
 cffi==1.17.1; python_version >= '3.8'
 charset-normalizer==3.4.2; python_version >= '3.7'
 ciso8601==2.3.2
@@ -27,20 +27,20 @@ flask-cors==4.0.2
 flask-mail==0.9.1
 flask-oauth==0.12
 flask-oauthlib==0.9.6
-fonttools==4.58.4; python_version >= '3.9'
-fsspec==2025.5.1; python_version >= '3.9'
+fonttools==4.59.0; python_version >= '3.9'
+fsspec==2025.7.0; python_version >= '3.9'
 future==1.0.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2'
 gevent==23.9.1; python_version >= '3.8'
 google-api-core[grpc]==2.25.1; python_version >= '3.7'
 google-auth==2.40.3; python_version >= '3.7'
-google-cloud-bigquery==3.34.0; python_version >= '3.9'
+google-cloud-bigquery==3.35.0; python_version >= '3.9'
 google-cloud-core==2.4.3; python_version >= '3.7'
 google-crc32c==1.7.1; python_version >= '3.9'
 google-resumable-media==2.7.2; python_version >= '3.7'
 googleapis-common-protos==1.70.0; python_version >= '3.7'
 greenlet==3.1.1; python_version >= '3.7'
-grpcio==1.73.0; python_version >= '3.9'
-grpcio-status==1.73.0; python_version >= '3.9'
+grpcio==1.73.1; python_version >= '3.9'
+grpcio-status==1.73.1; python_version >= '3.9'
 holidays==0.25; python_version >= '3.7'
 httplib2==0.22.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 idna==3.10; python_version >= '3.6'
@@ -86,10 +86,10 @@ pytz==2025.2
 requests==2.32.4; python_version >= '3.8'
 requests-oauthlib==1.1.0
 rsa==4.9.1; python_version >= '3.6' and python_version < '4'
-s3transfer==0.13.0; python_version >= '3.9'
+s3transfer==0.13.1; python_version >= '3.9'
 setuptools==80.9.0; python_version >= '3.9'
 six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
-snowflake-connector-python==3.15.0; python_version >= '3.9'
+snowflake-connector-python==3.16.0; python_version >= '3.9'
 snowflake-sqlalchemy==1.7.3; python_version >= '3.8'
 sortedcontainers==2.4.0
 sqlalchemy==1.4.54; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
@@ -98,25 +98,25 @@ sqlalchemy-redshift==0.8.14; python_version >= '3.4'
 sqlalchemy-trino==0.5.0; python_version >= '3.7'
 stanio==0.5.1; python_version >= '3.8'
 tenacity==9.1.2; python_version >= '3.9'
-thrift==0.16.0; python_version >= '3.0'
+thrift==0.16.0
 thrift-sasl==0.4.3
 tomlkit==0.13.3; python_version >= '3.8'
 tqdm==4.67.1; python_version >= '3.7'
 trino[sqlalchemy]==0.335.0; python_version >= '3.9'
-typing-extensions==4.13.2; python_version >= '3.8'
+typing-extensions==4.14.1; python_version >= '3.9'
 tzdata==2025.2; python_version >= '2'
 tzlocal==5.3.1; python_version >= '3.9'
-urllib3[socks]==2.4.0; python_version >= '3.9'
+urllib3[socks]==2.5.0; python_version >= '3.9'
 werkzeug==3.1.3; python_version >= '3.9'
-zope.event==5.0; python_version >= '3.7'
+zope.event==5.1; python_version >= '3.9'
 zope.interface==7.2; python_version >= '3.8'
 zstandard==0.23.0; python_version >= '3.8'
 zstd==1.5.7.2
-alembic==1.16.2; python_version >= '3.9'
+alembic==1.16.4; python_version >= '3.9'
 amqp==5.3.1; python_version >= '3.6'
 apache-superset==5.0.0; python_version >= '3.10'
 apispec[yaml]==6.8.2; python_version >= '3.9'
-apsw==3.50.1.0; python_version >= '3.9'
+apsw==3.50.3.0; python_version >= '3.9'
 attrs==25.3.0; python_version >= '3.8'
 babel==2.17.0; python_version >= '3.8'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
@@ -128,7 +128,7 @@ cattrs==25.1.1; python_version >= '3.9'
 celery==5.5.3; python_version >= '3.8'
 click-didyoumean==0.3.1; python_full_version >= '3.6.2'
 click-option-group==0.5.7; python_version >= '3.7'
-click-plugins==1.1.1
+click-plugins==1.1.1.2
 click-repl==0.3.0; python_version >= '3.6'
 colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
 cron-descriptor==1.4.5
@@ -138,10 +138,10 @@ deprecated==1.2.18; python_version >= '2.7' and python_version not in '3.0, 3.1,
 deprecation==2.1.0
 dnspython==2.7.0; python_version >= '3.9'
 email-validator==2.2.0; python_version >= '3.8'
-flask-appbuilder==4.7.0; python_version ~= '3.7'
+flask-appbuilder==4.8.0; python_version ~= '3.7'
 flask-babel==2.0.0
 flask-caching==2.3.1; python_version >= '3.8'
-flask-compress==1.17; python_version >= '3.9'
+flask-compress==1.18; python_version >= '3.9'
 flask-jwt-extended==4.7.1; python_version >= '3.9' and python_version < '4'
 flask-limiter==3.12; python_version >= '3.10'
 flask-login==0.6.3; python_version >= '3.7'
@@ -159,7 +159,7 @@ humanize==4.12.3; python_version >= '3.9'
 importlib-metadata==8.7.0; python_version >= '3.9'
 isodate==0.7.2; python_version >= '3.7'
 jsonpath-ng==1.7.0
-jsonschema==4.24.0; python_version >= '3.9'
+jsonschema==4.25.0; python_version >= '3.9'
 jsonschema-specifications==2025.4.1; python_version >= '3.9'
 kombu==5.5.4; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
@@ -167,12 +167,12 @@ limits==5.4.0; python_version >= '3.10'
 mako==1.3.10; python_version >= '3.8'
 markdown==3.8.2; python_version >= '3.9'
 markdown-it-py==3.0.0; python_version >= '3.8'
-marshmallow==3.23.1; python_version >= '3.9'
+marshmallow==3.26.1; python_version >= '3.9'
 marshmallow-sqlalchemy==1.4.2; python_version >= '3.9'
 mdurl==0.1.2; python_version >= '3.7'
 msgpack==1.0.8; python_version >= '3.8'
 msgspec==0.19.0; python_version >= '3.9'
-nh3==0.2.21; python_version >= '3.8'
+nh3==0.2.22; python_version >= '3.8'
 odfpy==1.4.1
 ordered-set==4.1.0; python_version >= '3.7'
 outcome==1.3.0.post0; python_version >= '3.7'
@@ -191,19 +191,20 @@ python-dotenv==1.1.1; python_version >= '3.9'
 python-geohash==0.8.5
 pyxlsb==1.0.10
 pyyaml==6.0.2; python_version >= '3.8'
+pyzstd==0.17.0; python_version >= '3.5'
 redis==4.6.0; python_version >= '3.7'
 referencing==0.36.2; python_version >= '3.9'
 requests-cache==1.2.1; python_version >= '3.8'
 rich==13.9.4; python_full_version >= '3.8.0'
-rpds-py==0.25.1; python_version >= '3.9'
-selenium==4.33.0; python_version >= '3.9'
-shillelagh[gsheetsapi]==1.3.5; python_version >= '3.9'
+rpds-py==0.26.0; python_version >= '3.9'
+selenium==4.34.2; python_version >= '3.9'
+shillelagh[gsheetsapi]==1.4.0; python_version >= '3.9'
 shortid==0.1.2
 simplejson==3.20.1; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2'
-slack-sdk==3.35.0; python_version >= '3.6'
+slack-sdk==3.36.0; python_version >= '3.6'
 sniffio==1.3.1; python_version >= '3.7'
 sqlalchemy-utils==0.38.3; python_version ~= '3.6'
-sqlglot==26.30.0; python_version >= '3.8'
+sqlglot==26.33.0; python_version >= '3.8'
 sqlparse==0.5.3; python_version >= '3.8'
 sshtunnel==0.4.0
 tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
