--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 -i https://pypi.org/simple
-alembic==1.16.2; python_version >= '3.9'
+alembic==1.16.4; python_version >= '3.9'
 amqp==5.3.1; python_version >= '3.6'
 apache-superset==5.0.0; python_version >= '3.10'
 apispec[yaml]==6.8.2; python_version >= '3.9'
-apsw==3.50.1.0; python_version >= '3.9'
+apsw==3.50.3.0; python_version >= '3.9'
 attrs==25.3.0; python_version >= '3.8'
 babel==2.17.0; python_version >= '3.8'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
@@ -16,13 +16,13 @@ cachelib==0.13.0; python_version >= '3.8'
 cachetools==5.5.2; python_version >= '3.7'
 cattrs==25.1.1; python_version >= '3.9'
 celery==5.5.3; python_version >= '3.8'
-certifi==2025.6.15; python_version >= '3.7'
+certifi==2025.7.14; python_version >= '3.7'
 cffi==1.17.1; python_version >= '3.8'
 charset-normalizer==3.4.2; python_version >= '3.7'
 click==8.2.1; python_version >= '3.10'
 click-didyoumean==0.3.1; python_full_version >= '3.6.2'
 click-option-group==0.5.7; python_version >= '3.7'
-click-plugins==1.1.1
+click-plugins==1.1.1.2
 click-repl==0.3.0; python_version >= '3.6'
 colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
 cron-descriptor==1.4.5
@@ -35,10 +35,10 @@ dnspython==2.7.0; python_version >= '3.9'
 email-validator==2.2.0; python_version >= '3.8'
 et-xmlfile==2.0.0; python_version >= '3.8'
 flask==2.3.3; python_version >= '3.8'
-flask-appbuilder==4.7.0; python_version ~= '3.7'
+flask-appbuilder==4.8.0; python_version ~= '3.7'
 flask-babel==2.0.0
 flask-caching==2.3.1; python_version >= '3.8'
-flask-compress==1.17; python_version >= '3.9'
+flask-compress==1.18; python_version >= '3.9'
 flask-jwt-extended==4.7.1; python_version >= '3.9' and python_version < '4'
 flask-limiter==3.12; python_version >= '3.10'
 flask-login==0.6.3; python_version >= '3.7'
@@ -62,7 +62,7 @@ isodate==0.7.2; python_version >= '3.7'
 itsdangerous==2.2.0; python_version >= '3.8'
 jinja2==3.1.6; python_version >= '3.7'
 jsonpath-ng==1.7.0
-jsonschema==4.24.0; python_version >= '3.9'
+jsonschema==4.25.0; python_version >= '3.9'
 jsonschema-specifications==2025.4.1; python_version >= '3.9'
 kombu==5.5.4; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
@@ -71,12 +71,12 @@ mako==1.3.10; python_version >= '3.8'
 markdown==3.8.2; python_version >= '3.9'
 markdown-it-py==3.0.0; python_version >= '3.8'
 markupsafe==3.0.2; python_version >= '3.9'
-marshmallow==3.23.1; python_version >= '3.9'
+marshmallow==3.26.1; python_version >= '3.9'
 marshmallow-sqlalchemy==1.4.2; python_version >= '3.9'
 mdurl==0.1.2; python_version >= '3.7'
 msgpack==1.0.8; python_version >= '3.8'
 msgspec==0.19.0; python_version >= '3.9'
-nh3==0.2.21; python_version >= '3.8'
+nh3==0.2.22; python_version >= '3.8'
 numpy==1.26.4; python_version >= '3.9'
 odfpy==1.4.1
 openpyxl==3.1.5; python_version >= '3.8'
@@ -108,33 +108,34 @@ python-geohash==0.8.5
 pytz==2025.2
 pyxlsb==1.0.10
 pyyaml==6.0.2; python_version >= '3.8'
+pyzstd==0.17.0; python_version >= '3.5'
 redis==4.6.0; python_version >= '3.7'
 referencing==0.36.2; python_version >= '3.9'
 requests==2.32.4; python_version >= '3.8'
 requests-cache==1.2.1; python_version >= '3.8'
 rich==13.9.4; python_full_version >= '3.8.0'
-rpds-py==0.25.1; python_version >= '3.9'
+rpds-py==0.26.0; python_version >= '3.9'
 rsa==4.9.1; python_version >= '3.6' and python_version < '4'
-selenium==4.33.0; python_version >= '3.9'
-shillelagh[gsheetsapi]==1.3.5; python_version >= '3.9'
+selenium==4.34.2; python_version >= '3.9'
+shillelagh[gsheetsapi]==1.4.0; python_version >= '3.9'
 shortid==0.1.2
 simplejson==3.20.1; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2'
 six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
-slack-sdk==3.35.0; python_version >= '3.6'
+slack-sdk==3.36.0; python_version >= '3.6'
 sniffio==1.3.1; python_version >= '3.7'
 sortedcontainers==2.4.0
 sqlalchemy==1.4.54; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 sqlalchemy-utils==0.38.3; python_version ~= '3.6'
-sqlglot==26.30.0; python_version >= '3.8'
+sqlglot==26.33.0; python_version >= '3.8'
 sqlparse==0.5.3; python_version >= '3.8'
 sshtunnel==0.4.0
 tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 trio==0.30.0; python_version >= '3.9'
 trio-websocket==0.12.2; python_version >= '3.8'
-typing-extensions==4.13.2; python_version >= '3.8'
+typing-extensions==4.14.1; python_version >= '3.9'
 tzdata==2025.2; python_version >= '2'
 url-normalize==2.2.1; python_version >= '3.8'
-urllib3[socks]==2.4.0; python_version >= '3.9'
+urllib3[socks]==2.5.0; python_version >= '3.9'
 vine==5.1.0; python_version >= '3.6'
 wcwidth==0.2.13
 websocket-client==1.8.0; python_version >= '3.8'
@@ -146,4 +147,3 @@ wtforms-json==0.3.5
 xlrd==2.0.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 xlsxwriter==3.0.9; python_version >= '3.6'
 zipp==3.23.0; python_version >= '3.9'
-zstandard==0.23.0; python_version >= '3.8'
